--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "100-grams-app",
     "slug": "100-grams-app",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "100gramsapp",
     "userInterfaceStyle": "automatic",
